--- a/01_HTML/text_content.html
+++ b/01_HTML/text_content.html
@@ -15,6 +15,6 @@
         따른 등급을 조합하여 표시한다.</p>
     <p>- 브로큰 페코</p>
     <p>- 브로큰 페코 수숑</p>
-    <p>- 브로큰 오렌지 페코 패닝</p>
+    <p>- 브로큰 오렌지 페코 패닝</p>dd
 </body>
 </html>
