본문 단락 구분

--- a/01_HTML/text_paragraph.html
+++ b/01_HTML/text_paragraph.html
@@ -5,8 +5,10 @@
 </head>
 <body>
     <h1>제목 글자</h1>
+    <!--아무 의미 없는 글자, 로렘 입숨 : lorem 이라 치면 똑같이 나옴-->
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <p>Phasellus sem tortor, volutpat vitae euismod eget</p>
+    <p>Phasellus sem tortor, volutpat vitae euismod eget</p> 
+
     
 </body>
 </html>
