3-6까지 달려왔다.

--- a/01_HTML/text_header.html
+++ b/01_HTML/text_header.html
@@ -11,5 +11,13 @@
     <h5>제목 글자 태그 5</h5>
     <p>Paragraphs 문장</p>   <!-- h6보다 p가 더 크다.-->
     <h6>제목 글자 태그 6</h6>
+
+    <hr> <!-- 수평 줄 삽입-->
+    <a href="http://www.naver.com" target="_black">NAVER</a>
+    <br> <!-- 한 줄 띄우기-->
+    <a href="http://www.youtube.com" target="_parent">YOUTUBE</a>
+    <br>
+    <a href="mailto:wnstjd4852@naver.com">우준성 이메일</a>
 </body>
 </html>
+
