--- a/01_HTML/text_paragraph.html
+++ b/01_HTML/text_paragraph.html
@@ -6,8 +6,8 @@
 <body>
     <h1>제목 글자</h1>
     <!--아무 의미 없는 글자, 로렘 입숨 : lorem 이라 치면 똑같이 나옴-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <p>Phasellus sem tortor, volutpat vitae euismod eget</p> 
+    <p><i><b><small>lorem</small> <sub>ipsum</sub> <sup>dolor</sup> <ins>sit</ins> <del>amet</del>, consectetur adipiscing elit.</p>
+    <p>Phasellus sem tortor, volutpat vitae euismod eget</p></b></i>
 
     
 </body>
