--- a/01_HTML/form_test.html
+++ b/01_HTML/form_test.html
@@ -18,7 +18,6 @@
         <input type="radio" name="rdo_gender" value="F">여자
         <input type="radio" name="rdo_gender" value="G">중성<br>
 
-        
         <input type="datetime" name="dt_today" value="2021-03-07"><br>
 
         <!-- 보이지 않는 양식 -->
@@ -28,6 +27,14 @@
         <input type="button" name="btn_normal" value="Click"><br>
         <input type="reset" name="btn_reset" value="Reset"><br>
         <input type="submit" name="btn_submit" value="Submit"><br>
+
+        <!-- 선택(콤보박스/드랍다운) -->
+        <select >
+            <option>김밥</option>
+            <option selected>떡볶이</option>
+            <option>순대</option>
+            <option>어묵</option>
+        </select>
     </form>
 </body>
 </html>
