--- a/02_CSS/position_2_test.html
+++ b/02_CSS/position_2_test.html
@@ -9,7 +9,7 @@
             height: 100px;
             position: relative;
             border: black solid 5px;
-            overflow: scroll;
+            overflow: hidden;
         }
 
         .box {
