--- a/04_project/index_2.html
+++ b/04_project/index_2.html
@@ -1,6 +1,9 @@
 <!-- 목표 : 핀터레스트 레이아웃으로 책 소개 만들기 
 1. 기본 핀터레스트는 책만 나오게 하고
-2. 눌렀을때 이미지가 반만 나오게 한 후 프리뷰 링크와 함께 책 소개 들어가기 -->
+2. 눌렀을때 이미지가 반만 나오게 한 후 프리뷰 링크와 함께 책 소개 들어가기 
+
+해야 하는 것 
+1. 반응형으로 홈페이지 크기 바뀔 때 라이트 박스 모양 바꾸기-->
 
 <!DOCTYPE html>
 <html>
