--- a/04_project/index.html
+++ b/04_project/index.html
@@ -35,40 +35,33 @@
                 });
             });
             
-            // 라이트 박스
-            $(".paper").click(function() { 
-                showLightBox(); 
-            });
-
-            $("#darken-background").click(function(){
-                hideLightBox();
-            });
-
-            // 라이트박스 이벤트 서포트 // 하얀 영역을 클릭해서 라이트박스가 꺼지는 것을 방지
-            $("#lightbox").click(function (event) {
-                event.stopPropagation()
-            });
-
+        // 라이트박스
+        $(".paper").click(function() { showLightBox(this); });
+        $("#darken-background").click(function() { hideLightBox(); });
+        // 라이트박스이벤트 서포트 // 하얀영역을 클릭해도 라이트박스꺼지는 걸 방지
+        $("#lightbox").click(function (event) {
+            event.stopPropagation();
+        });
         });
 
-        function showLightBox() {
-
-            $("#ramdom-image").attr({  // 라이트 박스를 클릭 했을 때 랜덤으로 이미지가 뜨게함 
-                src: function(){       // 원래 이미지에서 random 으로 바뀌는데 시간이 걸림
-                    var rnd_height = Math.floor(Math.random() * 600) + 10;
-                    return "https://placedog.net/500/" + rnd_height;
+        // 그리드내 이미지 클릭한것 나오게 하는 함수 변경
+        function showLightBox(obj) {
+            var img_src = obj.getElementsByTagName("img")[0].src;            
+            $("ramdom-image").attr({
+                src: function() {
+                    // var rnd_height = 500 + Math.floor(Math.random() * 100);            // 라이트 박스를 클릭 했을 때 랜덤으로 이미지가 뜨게함 
+                    return img_src; // "https://placekitten.com/600/" + rnd_height;       // 이미지 바꾸는데 시간이 걸림
                 }
             });
+
             $("#darken-background").show();
             $("#darken-background").css("top", $(window).scrollTop());
-
-            //스크롤을 못하게함 
-            $("body").css("overflow","hidden");
+            $("body").css('overflow', 'hidden');
         }
 
         function hideLightBox() {
             $("#darken-background").hide();
-            $("body").css("overflow","auto"); // hidden의 반대를 잘 모르기때문에 auto로 정함
+            $("body").css('overflow', 'auto'); // 정확
         }
 
 
@@ -392,7 +385,7 @@
                 </div>
             </div>
             <hr class="lightbox-splitter">
-            <img id="ramdom-image" src="https://placedog.net/600/600">
+            <img id="ramdom-image" src="">
         </div>
     </div>
 
