프로젝트 수정

--- a/04_project/index_2.html
+++ b/04_project/index_2.html
@@ -12,6 +12,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
+
     <script>
         // 로드 이벤트
         $(document).ready(function () {
@@ -153,7 +154,7 @@
         </div>
         <div class="paper">
             <div class="paper-holder">
-                <a><img width="190" src="https://placedog.net/190/195"></a>
+                <a><img width="190" src="https://placedog.net/190/196"></a>
             </div>
             <div class="paper-content">
                 <a class="paper-link" href="#">
@@ -333,15 +334,20 @@
         <div id="lightbox">
             <div class="user-information">
                 <a class="user-information-image" href="#">
-                    <img src="https://placedog.net/70/70">
+                    <img src="https://placedog.net/70/70" width="80" height="132">
                 </a>
                 <div class="user-information-text">
                     <h3>Dog lover</h3>
                     <p>Dog is love</p>
                 </div>
+                <div class="user-information-text">
+                    <h3>User</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore laudantium, beatae optio accusamus architecto sed veniam harum tempora iusto ipsam dolore tenetur voluptate iure perferendis nam esse cum fuga.</p>
+                </div>
             </div>
             <hr class="lightbox-splitter">
             <img id="dog-image" src="" width="400" height="400">
+            <p>강아지 키우고 싶다..</p>
         </div>
     </div>
     <footer id="main-footer"></footer>
